--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ssh-key: ${{secrets.SEMANTIC_RELASE_SSH_KEY}}
       - name: run_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITEA_TOKEN }}
