--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ssh-key: ${{secrets.SEMANTIC_RELASE_SSH_KEY}}
+          ssh-key: ${{ secrets.SEMANTIC_RELASE_SSH_KEY }}
+          ssh-known-hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
       - name: run_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITEA_TOKEN }}
