ci: use ssh for release push

--- a/.gitea/semantic_release.toml
+++ b/.gitea/semantic_release.toml
@@ -27,7 +27,7 @@ default_bump_level = 0
 name = "origin"
 type = "gitea"
 domain = "https://gitea.psi.ch"
-ignore_token_for_push = false
+ignore_token_for_push = true
 
 [tool.semantic_release.remote.token]
 env = "GITHUB_TOKEN"
