--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -23,4 +23,4 @@ jobs:
       - name: run_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITEA_TOKEN }}
-        run: pipx run python-semantic-release -c .gitea/semantic_release.toml version
+        run: pipx run python-semantic-release --no-vcs-release -c .gitea/semantic_release.toml version
